--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
   width: 1200px;
   margin: 0 auto; 
+  
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  color: gray;
 }
 
 .container {
@@ -15,25 +19,53 @@ body {
 }
 
 header {
-  min-height: 550px;
+  height: 480px;
   padding-top: 70px;
+  
+  background: brown url("../img/header-bg.jpg")
 }
 
 header img {
   display: inline-block;
-  float: left;
-  
+  float: left;  
+  position: relative;
+  top: -12px;
 }
 
-header ul {
+.main-nav {
   float: right;
   margin: 0;
-  padding: 0;
-  
+  margin-bottom: 120px;
+  padding: 18px 0;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;  
   list-style: none;  
 }
 
-header li {
-  display: inline-block;
+.main-nav li {
+  display: inline-block;  
+}
+
+.main-nav a {
+  margin-left: 50px;
+  color: white;
   
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;  
+  font-weight: 600;
+}
+
+.main-nav li:first-child > a {
+  margin-left: 0px;
+}
+
+header .slogan {
+  display: block;
+  text-align: center;
+  
+  
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
 }
