--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,29 @@ header .slogan {
   padding-top: 440px;
   margin: 0;
 }
+
+.features {
+  padding-top: 80px;
+  padding-bottom: 90px;
+  background-color: #ffcb78;  
+}
+
+.features-container {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.features ul{  
+  padding: 0;
+  list-style: none;
+}
+
+.features li {
+  float: left;
+  width: 210px;
+}
+
+.features li:nth-child(n+2) {
+  padding-left: 90px;
+  border-left: 1px solid #e7b66a;
+}
