--- a/css/style.css
+++ b/css/style.css
@@ -222,12 +222,25 @@ header .slogan {
 
 .features li {
   float: left;
-  width: 210px;
+  width: 210px;  
+  padding-top: 105px
 }
 
 .features li:nth-child(n+2) {
   padding-left: 90px;
   border-left: 1px solid #e7b66a;
+}
+
+.features-1 {
+  background: url("/img/feature-icon-1.png") no-repeat ;  
+}
+
+.features-2 {
+  background: url("/img/feature-icon-2.png") no-repeat 90px 6px;
+}
+
+.features-3 {
+  background: url("/img/feature-icon-3.png") no-repeat 90px 13px;
 }
 
 .history {
