--- a/css/style.css
+++ b/css/style.css
@@ -542,7 +542,9 @@ input[type="checkbox"] {
 }
 
 footer {
-  padding: 55px 0;
+  padding-top: 90px;
+  padding-bottom: 55px;
+  background-color: black;
 }
 
 .footer-container {
@@ -555,18 +557,50 @@ footer {
   width: 225px;
 }
 
+.footer-left img {
+  position: relative;
+  top: -32px;
+  margin-bottom: 10px;
+}
+
 .footer-right{
   float: right;
   width: 710px;
 }
 
-.footer-nav {
-  background-color: black;
+.footer-nav {  
+  margin: 0;
+  margin-bottom: 75px;
+  padding: 0;  
+  list-style: none;    
+}
+
+.footer-nav li {
+  display: inline-block;
+  margin-right: 55px;
+}
+
+.footer-nav a {
+  font-size: 15px;
+  text-transform: uppercase;
+  font-weight: bold;
+  
+  color: white;
+  text-decoration: none;
+}
+
+footer p {
+  margin: 0;
 }
 
 .footer-down > p {
   float: left;
   width: 200px;
+  padding-top: 13px;
+  
+  font-size: 13px;
+  line-height: 20px;
+  color: #969696;
 }
 
 .footer-copyright {
@@ -574,6 +608,47 @@ footer {
   margin-right: 20px;
 }
 
+.footer-copyright b {
+  color: #999;
+  margin-left: 25px;
+}
+
+.footer-copyright span {
+  color: #8d8d8d;
+}
+
+.footer-social a,
+.footer-copyright a {
+  display: inline-block;
+  vertical-align: top;
+  width: 70px;
+  height: 70px;
+  
+  font-size: 0;
+  background-color: #1b1b1b;
+}
+
+.footer-social a:hover,
+.footer-copyright a:hover{
+  background-color: #222;
+}
+
+.footer-copyright a {
+  margin-top: -4px;
+  background: #1b1b1b url("/img/academy.png") no-repeat center;
+}
+
+.footer-social-in {
+  background: url("/img/instagram.png") no-repeat center;
+}
+
+.footer-social-fb {
+  background: url("/img/facebook.png") no-repeat center;
+}
+
+.footer-social-vk {
+  background: url("/img/vk.png") no-repeat center;
+}
 
 
 
