--- a/css/style.css
+++ b/css/style.css
@@ -512,13 +512,51 @@ header .slogan {
   position: relative;
   display: block;
   width: 600px;
+  
   margin-left: 200px;
   margin-bottom: 55px;
   padding-left: 60px;
+  
+  cursor: pointer;
 }
 
-input[type="checkbox"] {
+.order-form input[type="checkbox"] {
   display: none;
+}
+
+.order-form .checkbox:hover {
+  color: #663d15;
+}
+
+.checkbox input[type="checkbox"] + .checkbox-indicator {
+  position: absolute;
+  top: -9px;
+  left: 0;
+  
+  width: 36px;
+  height: 36px;
+  
+  background-color: #e6b66c
+}
+
+ .checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 12px;
+  
+  width: 8px;
+  height: 18px;
+  
+  border: 3px solid black;
+  border-top: none;
+  border-left: none;
+  
+  
+}
+
+.checkbox input[type="checkbox"]:checked + .checkbox-indicator::before {
+  transform: rotate(45deg)
 }
 
 .order-form input[type="submit"] {
